# alloy-primitives-sqlx-demo

./: Cargo.toml  README.md
src/: main.rs
tests/: db_basic.rs  db_fixed.rs  db_fixed_20.rs  from_row.rs  from_row_address.rs  from_row_fixed.rs  from_row_fixed_20.rs
